best-practices-mpol/add-safe-to-evict/.chainsaw-test/patchedResources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod04
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod03
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
