best-practices-mpol/add-safe-to-evict/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-safe-to-evict
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-safe-to-evict.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ../.kyverno-test/resource.yaml
    - apply:
        file: resource-others.yaml
  - name: step-03
    try:
    - assert:
        file: patchedResources.yaml
    - error:
        file: notPatchedResources.yaml
